# simple-othello-ai

./: .gitignore  CMakeLists.txt  advanced.cpp  advanced.h  bitboard.cpp  bitboard.h  main.cpp  othello.cpp  othello.h  search.cpp  search.h
competition results/: competition1  competition2
